# Kairon

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLISHING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/blog/: 2026-06-causal-cache.md  hn-comment-pack.md
examples/: demo.py  rag_eval.py
src/kairon/: __init__.py  cache.py  discovery.py  embedding.py  graph.py  invalidation.py  models.py  reranker.py  router.py  server.py  storage.py
tests/: test_benchmark.py  test_core.py  test_rag_benchmark.py
