[project]
name = "kairon"
version = "0.3.0"
description = "Causally-Aware Semantic Cache: predictive invalidation via causal fingerprints"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "networkx>=3.0",
    "httpx>=0.27",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]